just use normal arm-none-eabi toolchain

--- a/modules/simple_sample/Makefile
+++ b/modules/simple_sample/Makefile
@@ -1,8 +1,4 @@
-ifeq ($(strip $(DEVKITARM)),)
-$(error "Please set DEVKITARM in your environment. export DEVKITARM=<path to>devkitARM")
-endif
-
-include $(DEVKITARM)/base_rules
+include ../../rules/dkarm_compat
 
 TARGET := module_sample
 BUILD := ../../build/$(TARGET)
@@ -14,19 +10,15 @@ OBJS = $(addprefix $(BUILD)/,\
 	gfx.o \
 )
 
-ARCH := -march=armv4t -mtune=arm7tdmi -mthumb-interwork
-CFLAGS = $(ARCH) -O2 -nostdlib -fpie -ffunction-sections -fdata-sections -fomit-frame-pointer -fno-inline -std=gnu11 -Wall $(CUSTOMDEFINES)
-LDFLAGS = $(ARCH) -fpie -pie -nostartfiles -lgcc
-
 .PHONY: clean all
 
 all: $(TARGET).bso
 $(BUILD)/%.o: ./%.c
 	@mkdir -p "$(BUILD)"
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) $(SO_CFLAGS) -c $< -o $@
 	
 $(TARGET).bso: $(OBJS)
-	$(CC) $(LDFLAGS) -e _modInit $^ -o $(OUTPUT)/$(TARGET).bso
+	$(CC) $(SO_LDFLAGS) -e _modInit $^ -o $(OUTPUT)/$(TARGET).bso
 	$(STRIP) -g $(OUTPUT)/$(TARGET).bso
 
 clean:
