Modernize hekate_ipl.ini for 4.9.1 and HOS7

--- a/res/hekate_ipl_template.ini
+++ b/res/hekate_ipl_template.ini
@@ -1,46 +1,59 @@
 [config]
-autoboot=5
+autoboot=4
+autoboot_list=0
 bootwait=3
-customlogo=1
-verification=2
+verification=1
+backlight=100
+autohosoff=0
+autonogc=1
 
 {-------- Stock -------}
-[Stock]
+[Stock 6.2.0 and lower]
+stock=1
 
-[Stock (SVC perms)]
-fullsvcperm=1
-debugmode=1
-
-[Stock (Prevent GC access)]
-kip1patch=nogc
-
-[Stock (Allow unsigned NCA)]
-kip1patch=nosigchk
+[Stock All FW]
+fss0=atmosphere/fusee-secondary.bin
+stock=1
 { }
+# Both above disable kernel patching
+# Stock All FW, includes exosphere and warmboot, ONLY when >= 7.0.0.
 
 {-- Custom Firmwares --}
-[AtmoHB]
-kip1=cfw/loader.kip1
-kip1=cfw/sm.kip1
+[Atmo FSS0 Vanilla]
+fss0=atmosphere/fusee-secondary.bin
+logopath=cfw/atmo.bmp
 
-[AtmoHB (SVC Perms)]
-kip1=cfw/loader.kip1
-kip1=cfw/sm.kip1
-fullsvcperm=1
+[CFW FSS0 extra kips]
+fss0=atmosphere/fusee-secondary.bin
+kip1=cfw/mods/mods_extra/*
+kip1=cfw/mods/mods_extra/single/extra.kip
+logopath=cfw/cfw.bmp
+# Both options for kip1 can be used. Wildcard and single.
 
-[Atmosphere Full]
-secmon=cfw/atmo/exosphere.bin
-kip1=cfw/atmo/loader.kip
-kip1=cfw/atmo/sm.kip
-kip1=cfw/atmo/fs_mitm.kip
-logopath=cfw/atmo/atmo.bmp
+[Atmo Vanilla]
+secmon=cfw/mods/exosphere.bin
+warmboot=cfw/mods/lp0fw.bin
+kip1=cfw/mods/loader.kip
+kip1=cfw/mods/sm.kip
+kip1=cfw/mods/pm.kip
+kip1=cfw/mods/ams_mitm.kip
+logopath=cfw/atmo.bmp
 atmosphere=1
-# kip1=cfw/atmo/pm.kip
+# All kips defined.
+
+[CFW Extra kips]
+secmon=cfw/mods/exosphere.bin
+warmboot=cfw/mods/lp0fw.bin
+kip1=cfw/mods/*
+kip1=cfw/mods/extra/extra.kip
+logopath=cfw/cfw.bmp
+atmosphere=1
+# All kips parsed from a directory and extra added.
 { }
 
 {------- Tools -------}
-[Clear Error Logs]
-kip1=cfw/nx-dreport.kip
+[memloader]
+payload=bootloader/payloads/memloader.bin
 
 
-# hekate - CTCaer mod v3.0 .ini template
+# hekate - CTCaer mod v4.9.1 .ini template
