Add info about Nyx/emuMMC

--- a/res/hekate_ipl_template.ini
+++ b/res/hekate_ipl_template.ini
@@ -10,18 +10,26 @@ autonogc=1
 {-------- Stock -------}
 [Stock 6.2.0 and lower]
 stock=1
+emummc_force_disable=1
 
 [Stock All FW]
 fss0=atmosphere/fusee-secondary.bin
 stock=1
-{ }
+emummc_force_disable=1
 # Both above disable kernel patching
 # Stock All FW, includes exosphere and warmboot, ONLY when >= 7.0.0.
+
+[Stock emuMMC All FW]
+fss0=atmosphere/fusee-secondary.bin
+stock=1
+{ }
 
 {-- Custom Firmwares --}
 [Atmo FSS0 Vanilla]
 fss0=atmosphere/fusee-secondary.bin
 logopath=cfw/atmo.bmp
+# You can have 2 entries of everything where one can boot with emuMMC and one without,
+# via the emummc_force_disable=1 key.
 
 [CFW FSS0 extra kips]
 fss0=atmosphere/fusee-secondary.bin
@@ -56,4 +64,4 @@ atmosphere=1
 payload=bootloader/payloads/memloader.bin
 
 
-# hekate - CTCaer mod v4.9.1 .ini template
+# hekate - CTCaer mod v5.0.0 .ini template
