nyx: Refactor Options to a separate object

--- a/nyx/Makefile
+++ b/nyx/Makefile
@@ -30,7 +30,7 @@ OBJS = $(addprefix $(BUILDDIR)/$(TARGET)/, \
 	start.o \
 	nyx.o heap.o \
 	gfx.o \
-	gui.o gui_info.o gui_tools.o gui_emmc_tools.o gui_emummc_tools.o \
+	gui.o gui_info.o gui_tools.o gui_options.o gui_emmc_tools.o gui_emummc_tools.o \
 	fe_emummc_tools.o fe_emmc_tools.o \
 )
 
