ext patches: Remove patches_template.ini load
Remove patches_template.ini load.
- It has useless patches, which some times, users confuse them for "bad" patches, even though they aren't.
- No one reads on how it works and it's constantly mishandled when there's no patches.ini (which completely overrides it).
- It was not supposed to be edited.

Also release will not include it anymore.
Template will still exist for demonstrating the syntax of `patches.ini`

This commit also corrects the patches.ini encoding note as ASCII.

--- a/res/patches_template.ini
+++ b/res/patches_template.ini
@@ -1,10 +1,15 @@
-# UTF-8
+# ASCII non-extended
 # A KIP section is [kip1_name:sha256_hex_8bytes]
 # A patchset is .patch_name=kip_section_dec:offset_hex_0x:length_hex_0x:src_data_hex,dst_data_hex
+#
 # _dec: 1 char decimal | _hex_0x: max u32 prefixed with 0x | _hex: hex array.
 # Kip1 section decimals: TEXT: 0, RODATA: 1, DATA: 2.
 # 
-# Care when editing this, otherwise it will fail to be parsed.
+# Careful when editing this, otherwise it will fail to be parsed.
+#
+# Note: the below patches is an obsolete method that was used
+#  to install homebrew for a qlaunch icon or 3.5GB RAM access.
+#  This is useless nowadays, because title override or custom qlaunch are a more proper solution.
 
 #FS Patches for 1.0.0
 [FS:de9fdda4085dd5fe]
