Modernize readme and hekate_ipl_template.ini
Adds more info on how the configs work.

--- a/res/hekate_ipl_template.ini
+++ b/res/hekate_ipl_template.ini
@@ -27,37 +27,56 @@ stock=1
 {-- Custom Firmwares --}
 [Atmo FSS0 Vanilla]
 fss0=atmosphere/fusee-secondary.bin
-logopath=cfw/atmo.bmp
-# You can have 2 entries of everything where one can boot with emuMMC and one without,
-# via the emummc_force_disable=1 key.
+logopath=bootloader/res/bootlogo_atmo.bmp
+icon=bootloader/res/icon_atmo.bmp
 
-[CFW FSS0 extra kips]
+# Note:
+# You can have 2 entries of everything where one can boot with emuMMC and one without,
+#  via the emummc_force_disable=1 key.
+# logopath= key is for bootlogo. icon= key is for Nyx icon.
+# All entries can have these stylistic keys.
+
+
+[CFW FSS0 extra kips & patches]
 fss0=atmosphere/fusee-secondary.bin
+kip1patch=name_of_patch
 kip1=cfw/mods/mods_extra/*
 kip1=cfw/mods/mods_extra/single/extra.kip
-logopath=cfw/cfw.bmp
+
+# Note:
 # Both options for kip1 can be used. Wildcard and single.
+#  You can override kips loaded from FSS0 if you define them after that entry.
+# If kip1 patch resides in patches.ini and that file OR the patch for
+#  current HOS version does not exist, it will error out.
+
 
 [Atmo Vanilla]
 secmon=cfw/mods/exosphere.bin
 warmboot=cfw/mods/lp0fw.bin
 kip1=cfw/mods/loader.kip
+kip1=cfw/mods/boot.kip
+kip1=cfw/mods/spl.kip
 kip1=cfw/mods/sm.kip
 kip1=cfw/mods/pm.kip
 kip1=cfw/mods/ams_mitm.kip
-logopath=cfw/atmo.bmp
 atmosphere=1
-# All kips defined.
+
+# Note:
+# All kips defined method. This can be changed to what is below also.
+# atmosphere=1 key is IMPORTANT when no FFS0 is defined.
+
 
 [CFW Extra kips]
 secmon=cfw/mods/exosphere.bin
 warmboot=cfw/mods/lp0fw.bin
 kip1=cfw/mods/*
 kip1=cfw/mods/extra/extra.kip
-logopath=cfw/cfw.bmp
 atmosphere=1
-# All kips parsed from a directory and extra added.
 { }
+
+# Note:
+# All kips parsed from a directory, plus extra added.
+
 
 {------- Tools -------}
 [memloader]
@@ -65,3 +84,14 @@ payload=bootloader/payloads/memloader.bin
 
 
 # hekate - CTCaer mod v5.0.0 .ini template
+
+# NOT TO BE USED AS IS!
+#  Pick [config] and then only the needed [sections]. # or { } lines can be ommited.
+#  If [config] is not copied, hekate will create one with defaults.
+
+# Note: The keys in a section are parsed sequentially.
+#  This is important for override order of keys (if any double or matching functionality).
+
+# Disclaimer: There are many combos, that allow hekate to basically boot everything NATIVELY.
+#  hekate will ALWAYS do what YOU tell it to do. If you get an error,
+#  that means that hekate_ipl.ini was wrongly made or files are missing!
