Fix building on make 4.3

--- a/modules/simple_sample/Makefile
+++ b/modules/simple_sample/Makefile
@@ -7,7 +7,7 @@ include $(DEVKITARM)/base_rules
 TARGET := module_sample
 BUILD := ../../build/$(TARGET)
 OUTPUT := ../../output
-VPATH = $(dir $(wildcard ./*/)) $(dir $(wildcard ./*/*/))
+VPATH = $(dir ./) $(dir $(wildcard ./*/))
 
 OBJS = $(addprefix $(BUILD)/,\
 	module_sample.o \
