Update template with new key for config section

--- a/res/hekate_ipl_template.ini
+++ b/res/hekate_ipl_template.ini
@@ -1,11 +1,11 @@
 [config]
-autoboot=4
+autoboot=0
 autoboot_list=0
 bootwait=3
-verification=1
 backlight=100
 autohosoff=0
 autonogc=1
+updater2p=1
 
 {-------- Stock -------}
 [Stock 6.2.0 and lower]
