Minimize make info noise during building

--- a/modules/hekate_libsys_lp0/Makefile
+++ b/modules/hekate_libsys_lp0/Makefile
@@ -21,10 +21,10 @@ LDFLAGS = $(ARCH) -fpie -pie -nostartfiles -lgcc
 all: $(TARGET).bso
 $(BUILD)/%.o: ./%.c
 	@mkdir -p "$(BUILD)"
-	$(CC) $(CFLAGS) -c $< -o $@
+	@$(CC) $(CFLAGS) -c $< -o $@
 
 $(TARGET).bso: $(OBJS)
-	$(CC) $(LDFLAGS) -e _modInit $^ -o $(OUTPUT)/$(TARGET).bso
+	@$(CC) $(LDFLAGS) -e _modInit $^ -o $(OUTPUT)/$(TARGET).bso
 	$(STRIP) -g $(OUTPUT)/$(TARGET).bso
 
 clean:
