--- a/modules/hekate_libsys_minerva/Makefile
+++ b/modules/hekate_libsys_minerva/Makefile
@@ -27,7 +27,8 @@ $(BUILD)/%.o: ./%.c
 
 $(TARGET).bso: $(OBJS)
 	@$(CC) $(LDFLAGS) -e _minerva_init $^ -o $(OUTPUT)/$(TARGET).bso
-	$(STRIP) -g $(OUTPUT)/$(TARGET).bso
+	@$(STRIP) -g $(OUTPUT)/$(TARGET).bso
+	@echo "-------------\nBuilt module: "$(TARGET)".bso\n-------------"
 
 clean:
 	@rm -rf $(OUTPUT)/$(TARGET).bso
