In case native GCC is missing, inform user

--- a/tools/bin2c/Makefile
+++ b/tools/bin2c/Makefile
@@ -1,5 +1,9 @@
 NATIVE_CC ?= gcc
 
+ifeq (, $(shell which $(NATIVE_CC) 2>/dev/null))
+$(error "Native GCC is missing. Please install it first. If it's path is custom, set it with export NATIVE_CC=<path to native gcc toolchain>")
+endif
+
 .PHONY: all clean
 
 all: bin2c
