--- a/res/hekate_ipl_template.ini
+++ b/res/hekate_ipl_template.ini
@@ -11,7 +11,7 @@ bootprotect=0
 
 {-------- Stock -------}
 [Stock]
-fss0=atmosphere/fusee-secondary.bin
+fss0=atmosphere/package3
 stock=1
 emummc_force_disable=1
 
@@ -25,24 +25,48 @@ emummc_force_disable=1
 
 {-- Custom Firmwares --}
 [Atmo Vanilla]
-fss0=atmosphere/fusee-secondary.bin
+fss0=atmosphere/package3
+kip1=atmosphere/kips/*
 
 # Note:
-# The above adheres to emummc.ini. It will launch emuMMC if enabled, otherwise sysMMC
-# You can have 2 entries of everything where one can boot with emuMMC and one without,
-#  via the emummc_force_disable=1 and emummcforce=1 keys. Examples follow below.
+# The above adheres to emummc.ini. It will launch emuMMC if enabled, otherwise sysMMC.
+# The kip1 line can be omitted if wanted. It's in example in order to mimic fusee behavior.
+
+
 
 [Atmo EMU]
-fss0=atmosphere/fusee-secondary.bin
+fss0=atmosphere/package3
 emummcforce=1
 
 [Atmo SYS]
-fss0=atmosphere/fusee-secondary.bin
+fss0=atmosphere/package3
 emummc_force_disable=1
+
+# Note:
+# You can have 2 entries of everything where one can boot with emuMMC and one without,
+#  via the emummc_force_disable=1 and emummcforce=1 keys. Like the examples above.
+# These 2 entries allow user to easily boot enforceable SYS or EMU CFW
+# emummcforce=1 makes sure that emuMMC is enabled otherwise it will error out
+#  in order to protect user from booting SYS without knowing.
+# emummc_force_disable=1 disables emuMMC and allows user to boot SYS CFW
+#  even if emuMMC is enabled.
+
+
+
+[Atmo EMU2]
+fss0=atmosphere/package3
+emupath=emuMMC/SD02
+emummcforce=1
+
+# Note:
+# The above allows you to swap emuMMC on the fly while booting.
+# The path defined is the main path of emuMMC folder, for example
+#  emuMMC/RAW1, emuMMC/RAW2, emuMMC/SD00, emuMMC/TEST, etc.
+
 
 
 [Atmo with extra kips]
-fss0=atmosphere/fusee-secondary.bin
+fss0=atmosphere/package3
 kip1=cfw/mods/mods_extra/*
 kip1=cfw/mods/mods_extra/single/extra.kip
 
@@ -54,7 +78,7 @@ kip1=cfw/mods/mods_extra/single/extra.kip
 
 {-- Custom Firmwares Old methods --}
 [CFW FSS0 extra kips & patches]
-fss0=atmosphere/fusee-secondary.bin
+fss0=atmosphere/package3
 kip1patch=name_of_patch
 kip1=cfw/mods/mods_extra/*
 kip1=cfw/mods/mods_extra/single/extra.kip
@@ -64,6 +88,7 @@ kip1=cfw/mods/mods_extra/single/extra.kip
 #  You can override kips loaded from FSS0 if you define them after the fss0 key.
 # If kip1 patch resides in patches.ini and that file OR the patch for
 #  current HOS version does not exist, it will error out.
+
 
 
 [CFW KIPs method]
@@ -82,37 +107,45 @@ atmosphere=1
 # atmosphere=1 key is IMPORTANT when no FFS0 is defined.
 
 
+
 [CFW KIPs method with wildcard]
 secmon=cfw/mods/exosphere.bin
 warmboot=cfw/mods/lp0fw.bin
 kip1=cfw/mods/*
 kip1=cfw/mods/extra/extra.kip
 atmosphere=1
-{ }
 
 # Note:
 # All kips parsed from a directory, plus extra added.
 
 
+
 {------- Tools -------}
-[memloader]
-payload=bootloader/payloads/memloader.bin
+[Lockpick RCM]
+payload=bootloader/payloads/Lockpick_RCM.bin
 
 
-# hekate - CTCaer mod v5.5.3 .ini template
 
-# All entries in this template can have these stylistic keys.
-# Like logopath= key which is for bootlogo and icon= key for Nyx icon.
-# Other than these there many other keys to choose from, like the exosphere configuration keys.
+# hekate - CTCaer mod v5.6.0 .ini template
+#
+# All entries in this template can have these stylistic keys:
+#  like logopath= key which is for bootlogo and icon= key for Nyx icon.
+# Other than these, there many other keys to choose from, like the exosphere configuration keys.
 # All of them are descibed in the main README.
-
+#
+# Atmosphere 1.0.0 changes:
+# Entries that use Atmosphere are updated to use package3 instead of fusee-secondary.bin for
+#  Atmosphere 1.0.0 and up. If 0.20.1 and older is used, replace package3 with fusee-secondary.bin.
+#
+#
 # NOT TO BE USED AS IS!
 #  Pick [config] and then only the needed [sections]. # or { } lines can be ommited.
 #  If [config] is not copied, hekate will create one with defaults.
-
+#  If wanted, only the changed defaults can be edited. The rest will be created automatically.
+#
 # Note: The keys in a section are parsed sequentially.
 #  This is important for override order of keys (if any double or matching functionality).
 
 # Disclaimer: There are many combos, that allow hekate to basically boot everything NATIVELY.
 #  hekate will ALWAYS do what YOU tell it to do. If you get an error,
-#  that means that hekate_ipl.ini was wrongly made or files are missing!
+#  that means that hekate_ipl.ini was wrongly made or files are missing/corrupt/etc!
