bootloader: Add animated ticker for VOL- wait
Now an animated line is drawn while bootlogo wait is active.
This will remind user to press VOL- if needed and also give visible feedback.

A new config key was added to disable it for custom bootlogos. Set `noticker=1` in `[config]` section.
It always show for default hekate one.

For now now there's no GUI option for it.

--- a/res/hekate_ipl_template.ini
+++ b/res/hekate_ipl_template.ini
@@ -2,8 +2,9 @@
 autoboot=0
 autoboot_list=0
 bootwait=3
+noticker=0
 backlight=100
-autohosoff=0
+autohosoff=1
 autonogc=1
 updater2p=1
 bootprotect=0
@@ -62,6 +63,7 @@ emummcforce=1
 # The above allows you to swap emuMMC on the fly while booting.
 # The path defined is the main path of emuMMC folder, for example
 #  emuMMC/RAW1, emuMMC/RAW2, emuMMC/SD00, emuMMC/TEST, etc.
+# Only works with emuMMC created/migrated via hekate.
 
 
 
@@ -73,7 +75,7 @@ kip1=cfw/mods/mods_extra/single/extra.kip
 # Note:
 # The above can be used with any fss0 entry. Like the ones above.
 # You can even override atmosphere (fss0) kips with this.
-
+# The wildcard '*' like above can be used to load all kips from a selected directory.
 
 
 {-- Custom Firmwares Old methods --}
@@ -85,7 +87,7 @@ kip1=cfw/mods/mods_extra/single/extra.kip
 
 # Note:
 # Both options for kip1 can be used. Wildcard and single.
-#  You can override kips loaded from FSS0 if you define them after the fss0 key.
+#  You can override kips loaded from FSS0/PKG3 if you define them after the fss0 key.
 # If kip1 patch resides in patches.ini and that file OR the patch for
 #  current HOS version does not exist, it will error out.
 
@@ -126,7 +128,7 @@ payload=bootloader/payloads/Lockpick_RCM.bin
 
 
 
-# hekate - CTCaer mod v5.6.0 .ini template
+# hekate - CTCaer mod v5.8.0 .ini template
 #
 # All entries in this template can have these stylistic keys:
 #  like logopath= key which is for bootlogo and icon= key for Nyx icon.
