--- a/modules/hekate_libsys_lp0/Makefile
+++ b/modules/hekate_libsys_lp0/Makefile
@@ -26,7 +26,7 @@ $(BUILD)/%.o: ./%.c
 	@$(CC) $(CFLAGS) $(BDKINC) -c $< -o $@
 
 $(TARGET).bso: $(OBJS)
-	@$(CC) $(LDFLAGS) -e _modInit $^ -o $(OUTPUT)/$(TARGET).bso
+	@$(CC) $(LDFLAGS) -e sdram_lp0_entry $^ -o $(OUTPUT)/$(TARGET).bso
 	@$(STRIP) -g $(OUTPUT)/$(TARGET).bso
 	@echo  -e "-------------\nBuilt module: "$(TARGET)".bso\n-------------"
 
